--- a/src/app/actualizar/actualizar.page.html
+++ b/src/app/actualizar/actualizar.page.html
@@ -1,6 +1,9 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>actualizar</ion-title>
+    <ion-buttons slot="start">
+      <ion-back-button></ion-back-button>
+    </ion-buttons>
+    <ion-title>Actualizar</ion-title>
   </ion-toolbar>
 </ion-header>
 
