--- a/src/app/menu/menu.page.html
+++ b/src/app/menu/menu.page.html
@@ -8,4 +8,5 @@
  
   <ion-button expand="block" routerLink='/home' >Insertar producto</ion-button>
   <ion-button expand="block" routerLink='/lista' >Listado de productos</ion-button>
+  <ion-button expand="block" routerLink='/misproductos' >Mis productos</ion-button>
 </ion-content>
